# mcp-test-server

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yaml
assets/: generate_images.py  mcp.avif
src/: main.rs
