[package]
name = "mcp-test-server"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Strobusch <dastrobu@gmail.com>"]
description = "A test MCP server that provides various tools to test edge cases with MCP clients"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dastrobu/mcp-test-server"
keywords = ["mcp", "testing", "model-context-protocol"]
categories = ["development-tools::testing"]

[dependencies]
rmcp = { version = "0.14", features = ["transport-io", "macros", "server"] }
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "mcp-test-server"
path = "src/main.rs"
